# Neural-EDGE_site

./: pyproject.toml
app_backend/: main.py  settings.py
app_backend/api/: base.py  project.py
app_backend/database/: database.py
