[tool.poetry]
name = "app-backend"
version = "0.1.0"
description = ""
authors = ["Alex <a.vi.arabadzhi@mail.ru>"]
readme = "README.md"
packages = [{include = "app-backend"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
pydantic-settings = "^2.5.2"
uvicorn = "^0.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
